--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -4,7 +4,8 @@
     overflow: hidden;
 }
 .meRightimgcontainer img{
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
+
