--- a/src/components/UI/SocialConnect/style.css
+++ b/src/components/UI/SocialConnect/style.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    /* position: absolute; */
     z-index: 999;
     border-radius: 20px;
 }
